Validated database tables

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -924,18 +924,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Defining the 'validate_tables' function\n",
     "def validate_tables(df, table_name):\n",
     "    \n",
     "    # Displaying validation message\n",
-    "    print(f\"Validating the {table_name} table...\\n\\\n",
-    "        Validating the first condition...\")\n",
+    "    print(f\"Validating the {table_name} table...\\nValidating the first condition...\")\n",
     "    \n",
-    "    # Postgresql query to return the number of records\n",
+    "    # Query to return the number of records\n",
     "    records_query = f\"SELECT COUNT(*) FROM {table_name};\"\n",
     "    \n",
     "    # Executing the records query\n",
@@ -950,11 +949,11 @@
     "    # Fetching the number of rows in the dataframe\n",
     "    row_count = df.shape[0]\n",
     "    \n",
+    "    # Validating condition 1\n",
     "    if (record_count == row_count):\n",
-    "        print(f\"The {table_name} table has passed the first validation conditioin \\n\\\n",
-    "            Number of table records = {record_count}\\n\\n\\\n",
-    "            Validating the second condition...\")\n",
+    "        print(f\"The {table_name} table has passed the first validation condition \\nNumber of table records = {record_count}\\n\\nValidating the second condition...\")\n",
     "        \n",
+    "        # Query to return the number of fields\n",
     "        fields_query = f\"SELECT COUNT(*) FROM information_schema.columns WHERE table_name = '{table_name}';\"\n",
     "        \n",
     "        # Executing the records query\n",
@@ -963,31 +962,25 @@
     "        except psycopg2.Error as e:\n",
     "            print(e) \n",
     "            \n",
-    "        # Fetch the result\n",
+    "        # Fetch the number of fields in the database table\n",
     "        field_count = cur.fetchone()[0]   \n",
     "        \n",
+    "        #Fetching the number of columns in the dataframe\n",
     "        column_count = df.shape[1] \n",
     "        \n",
+    "        # Validating condition 2\n",
     "        if (field_count == column_count):\n",
-    "            print(f\"The {table_name} table has passed the second validation conditioin \\n\\\n",
-    "                Number of table fields = {field_count}\")\n",
+    "            print(f\"The {table_name} table has passed the second validation condition \\nNumber of table fields = {field_count}\")\n",
     "        else:\n",
-    "            print(f\"The {table_name} table has failed the second validation condition \\n\\\n",
-    "                    Number of table fields = {field_count} \\n\\\n",
-    "                    Number of dataframe columns = {column_count}\")\n",
+    "            print(f\"The {table_name} table has failed the second validation condition \\nNumber of table fields = {field_count} \\nNumber of dataframe columns = {column_count}\")\n",
     "            \n",
     "    else:\n",
-    "        print(f\"The {table_name} table has failed the first validation condition \\n\\\n",
-    "            Number of table records = {record_count} \\n\\\n",
-    "            Number of dataframe rows = {row_count}\")\n",
-    "    \n",
-    "    \n",
-    "\n"
+    "        print(f\"The {table_name} table has failed the first validation condition \\nNumber of table records = {record_count} \\nNumber of dataframe rows = {row_count}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -995,18 +988,194 @@
      "output_type": "stream",
      "text": [
       "Validating the inventories table...\n",
-      "        Validating the first condition...\n",
-      "The inventories table has passed the first validation conditioin \n",
-      "            Number of table records = 11681\n",
+      "Validating the first condition...\n",
+      "The inventories table has passed the first validation condition \n",
+      "Number of table records = 11681\n",
       "\n",
-      "            Validating the second condition...\n",
-      "The inventories table has passed the second validation conditioin \n",
-      "                Number of table fields = 3\n"
+      "Validating the second condition...\n",
+      "The inventories table has passed the second validation condition \n",
+      "Number of table fields = 3\n"
      ]
     }
    ],
    "source": [
+    "# Validating the 'inventories' table\n",
     "validate_tables(inventories_df, 'inventories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the inventory_parts table...\n",
+      "Validating the first condition...\n",
+      "The inventory_parts table has passed the first validation condition \n",
+      "Number of table records = 580251\n",
+      "\n",
+      "Validating the second condition...\n",
+      "The inventory_parts table has passed the second validation condition \n",
+      "Number of table fields = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validating the 'inventory_parts' table\n",
+    "validate_tables(inventory_parts_df, 'inventory_parts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the inventory_sets table...\n",
+      "Validating the first condition...\n",
+      "The inventory_sets table has passed the first validation condition \n",
+      "Number of table records = 2846\n",
+      "\n",
+      "Validating the second condition...\n",
+      "The inventory_sets table has passed the second validation condition \n",
+      "Number of table fields = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validating the 'inventory_sets' table\n",
+    "validate_tables(inventory_sets_df, 'inventory_sets')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the parts table...\n",
+      "Validating the first condition...\n",
+      "The parts table has passed the first validation condition \n",
+      "Number of table records = 25993\n",
+      "\n",
+      "Validating the second condition...\n",
+      "The parts table has passed the second validation condition \n",
+      "Number of table fields = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validating the 'parts' table\n",
+    "validate_tables(parts_df, 'parts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the part_categories table...\n",
+      "Validating the first condition...\n",
+      "The part_categories table has passed the first validation condition \n",
+      "Number of table records = 57\n",
+      "\n",
+      "Validating the second condition...\n",
+      "The part_categories table has passed the second validation condition \n",
+      "Number of table fields = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validating the 'part categories' table\n",
+    "validate_tables(part_categories_df, 'part_categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the colours table...\n",
+      "Validating the first condition...\n",
+      "The colours table has passed the first validation condition \n",
+      "Number of table records = 135\n",
+      "\n",
+      "Validating the second condition...\n",
+      "The colours table has passed the second validation condition \n",
+      "Number of table fields = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validating the 'colours' table\n",
+    "validate_tables(colours_df, 'colours')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the sets table...\n",
+      "Validating the first condition...\n",
+      "The sets table has passed the first validation condition \n",
+      "Number of table records = 11673\n",
+      "\n",
+      "Validating the second condition...\n",
+      "The sets table has passed the second validation condition \n",
+      "Number of table fields = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validating the 'sets' table\n",
+    "validate_tables(sets_df, 'sets')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the themes table...\n",
+      "Validating the first condition...\n",
+      "The themes table has passed the first validation condition \n",
+      "Number of table records = 614\n",
+      "\n",
+      "Validating the second condition...\n",
+      "The themes table has passed the second validation condition \n",
+      "Number of table fields = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validating the 'themes' table\n",
+    "validate_tables(themes_df, 'themes')"
    ]
   }
  ],
