--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -89,6 +89,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The above states that the database already exists. This should be ignored because the code block was executed more than once."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Reconnecting to the LEGO Database"
    ]
   },
