Updated last comment to notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1184,7 +1184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All the tables have passed the validation conditions. This indicates that all the data was successfully inserted into the database."
+    "All the tables have passed the validation conditions. This indicates that all the data was successfully inserted into the database, and that brings me to the end of this poroject."
    ]
   }
  ],
